--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Canvas Resize</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="canvas.js"></script>
+    
     <style>
         canvas{
             border: 1px solid black;
-            height: 100%;
-            width: 100%;
+        }
+        body{
+            margin: 0;
         }
     </style>
 </head>
 <body>
     <canvas></canvas>
+    <script src="canvas.js" defer></script>
 </body>
 </html>
